# MoveGuiderAI

./: .gitignore  README.md  api_clients.py  app.py  config.py  logic.py  main.py  plotting.py  pyproject.toml  requirements.txt  todo.md
data/: user_profiles.json
logic/: generator.py  hydration.py  performance.py  planner.py  user_profiles.py  utils.py  weather_parser.py
plotting/: area_charts.py  gantt.py  line_charts.py  radar_charts.py
